[metadata]
name = dbtests
description = Add a short description here!
author = François Pacull
author_email = pacullfrancois@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/aetperf/Testing_Against_DBs
platforms = Windows,Linux

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
install_requires =
    importlib-metadata; python_version<"3.8"
    sqlalchemy
    pymssql
    pandas

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install dbtests[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
# On Linux pip install .[testing]'
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov dbtests --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel
